Apply suggestions from code review

--- a/pages.fa/common/[[.md
+++ b/pages.fa/common/[[.md
@@ -4,7 +4,7 @@
 > عدد 0 برمیگرداند اگر حاصل عبارت شرط درست باشد و 1 اگر نادرست باشد.
 > اطلاعات بیشتر: <https://www.gnu.org/software/bash/manual/bash.html#index-_005b_005b>.
 
-- اینکه متغییری برابر/نابرابر با رشته ای معین است را بررسی میکند
+- اینکه متغییری برابر/نابرابر با رشته ای معین است را بررسی میکند :
 
 `[[ ${{متغییر}} {{==|!=}} "{{رشته}}" ]]`
 
