--- a/pages.pt_BR/common/!.md
+++ b/pages.pt_BR/common/!.md
@@ -1,4 +1,4 @@
-# Ponto de exclamação
+# Exclamation mark
 
 > Mecanismo do bash builtin para substituir com um comando existente no histórico.
 > Mais informações: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
