--- a/pages.ko/common/!.md
+++ b/pages.ko/common/!.md
@@ -9,16 +9,16 @@
 
 - `history` 명령어를 통해 찾은 줄 번호의 명령으로 대체:
 
-`!{{number}}`
+`!{{숫자}}`
 
 - 지정된 행의 수만큼 사용된 명령으로 대체:
 
-`!-{{number}}`
+`!-{{숫자}}`
 
-- `string`으로 시작하는 가장 최근의 명령으로 대체:
+- `문자열`로 시작하는 가장 최근의 명령으로 대체:
 
-`!{{string}}`
+`!{{문자열}}`
 
-- 가장 최신 명령의 인수로 대체:
+- 가장 최신 명령어의 인수로 대체:
 
-`{{command}} !*`
+`{{명령어}} !*`
