--- a/pages.pt_BR/common/!.md
+++ b/pages.pt_BR/common/!.md
@@ -1,6 +1,6 @@
 # Exclamation mark
 
-> Mecanismo do bash builtin para substituir com um comando existente no histórico.
+> Mecanismo interno do bash para substituir por um comando existente no histórico.
 > Mais informações: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
 
 - Substitui com o comando anterior e execute com o sudo:
