common-arguments: rename directory to map

--- a/pages.nl/common/[.md
+++ b/pages.nl/common/[.md
@@ -16,9 +16,9 @@
 
 `[ -f "{{pad/naar/bestand}}" ]`
 
-- Test of een directory niet bestaat:
+- Test of een map niet bestaat:
 
-`[ ! -d "{{pad/naar/directory}}" ]`
+`[ ! -d "{{pad/naar/map}}" ]`
 
 - If-else instructie:
 
