--- a/pages.nl/common/[.md
+++ b/pages.nl/common/[.md
@@ -1,6 +1,6 @@
 # [
 
-> Controleer bestandstypes and vergelijk waardes.
+> Controleer bestandstypes en vergelijk waardes.
 > Geeft een 0 terug als de voorwaarde waar (true) is, als het niet waar (false) is geeft het een 1 terug.
 > Meer informatie: <https://www.gnu.org/software/bash/manual/bash.html#index-test>.
 
