--- a/pages.de/common/k6.md
+++ b/pages.de/common/k6.md
@@ -1,6 +1,6 @@
 # k6
 
-> Open-Source Tool und SaaS für die Lasttests von Entwicklungsteams.
+> Open-Source Tool und SaaS für Lasttests.
 > Weitere Informationen: <https://k6.io>.
 
 - Führe einen Lasttest lokal aus:
