--- a/pages.de/common/k6.md
+++ b/pages.de/common/k6.md
@@ -11,9 +11,9 @@
 
 `k6 run --vus {{10}} --dauer {{30s}} {{skript.js}}`
 
-- Führe einen Lasttest lokal mit einer festgelegten Umgebungsvariable aus:
+- Führe einen Lasttest lokal mit einer gesetzten Umgebungsvariablen aus:
 
-`k6 run -e {{HOSTNAME=beispiel.com}} {{skript.js}}`
+`k6 run -e {{HOSTNAME}}={{beispiel.com}} {{skript.js}}`
 
 - Führe einen Lasttest lokal aus und speichere die Ergebnisse in InfluxDB:
 
