--- a/pages.de/common/k6.md
+++ b/pages.de/common/k6.md
@@ -19,7 +19,7 @@
 
 `k6 run --out influxdb={{http://localhost:8086/k6db}} {{skript.js}}`
 
-- Führe einen Lasttest lokal aus und verwerfe die Antwort (deutlich schneller):
+- Führe einen Lasttest lokal aus und verwerfe Antworten (deutlich schneller):
 
 `k6 run --discard-response-bodies {{skript.js}}`
 
