--- a/pages.de/common/!.md/!.md
+++ b/pages.de/common/!.md/!.md
@@ -1,6 +1,6 @@
 # Ausrufezeichen
 
-> Ein eingebautes Bash-Tool, um es mit einem Befehl aus der History zu ersetzen.
+> Ein in Bash integriertes Kommando, welches durch einen Befehl aus dem Befehlsverlauf ersetzt wird.
 > Mehr Informationen: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
 
 - Ersetze durch den vorherigen Befehl und führe ihn mit sudo aus:
