--- a/pages.de/common/!.md/!.md
+++ b/pages.de/common/!.md/!.md
@@ -3,7 +3,7 @@
 > Ein in Bash integriertes Kommando, welches durch einen Befehl aus dem Befehlsverlauf ersetzt wird.
 > Mehr Informationen: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
 
-- Ersetze durch den vorherigen Befehl und führe ihn mit sudo aus:
+- Ersetze '!!' durch den vorherigen Befehl und führe ihn mit sudo aus:
 
 `sudo !!`
 
