--- a/pages.de/common/!.md/!.md
+++ b/pages.de/common/!.md/!.md
@@ -7,7 +7,7 @@
 
 `sudo !!`
 
-- Ersetze durch einen Befehl basierend auf seiner Zeilennummer, die mit `history` gefunden wurde:
+- Führe den Befehl mit Nummer {{nummer}} aus. Die Nummer eines Befehls kann mit `history` herausgefunden werden:
 
 `!{{nummer}}`
 
