--- a/pages.de/common/!.md/!.md
+++ b/pages.de/common/!.md/!.md
@@ -11,7 +11,7 @@
 
 `!{{nummer}}`
 
-- Ersetze durch einen Befehl, der eine angegebene Anzahl von Zeilen zuvor verwendet wurde:
+- Führe den {{nummer}}'t letzt ausgeführten Befehl aus:
 
 `!-{{nummer}}`
 
