--- a/pages.hi/common/7z.md
+++ b/pages.hi/common/7z.md
@@ -5,31 +5,31 @@
 
 - किसी नए या मौजूदा संग्रह में एक फ़ाइल या निर्देशिका जोड़ें:
 
-`7z a {{पथ/से/संग्रह.7z}} {{पथ/से/फ़ाइल_या_निर्देशिका}}`
+`7z a {{संग्रह.7z/का/पथ}} {{फ़ाइल_या_निर्देशिका/का/पथ}}`
 
 - किसी मौजूदा संग्रह को एन्क्रिप्ट करें (फ़ाइल नाम सहित):
 
-`7z a {{पथ/से/एन्क्रिप्टेड.7z}} -p{{पासवर्ड}} -mhe=on {{पथ/से/संग्रह.7z}}`
+`7z a {{एन्क्रिप्टेड.7z/का/पथ}} -p{{पासवर्ड}} -mhe=on {{संग्रह.7z/का/पथ}}`
 
 - मूल निर्देशिका संरचना को संरक्षित करते हुए एक संग्रह निकालें:
 
-`7z x {{पथ/से/संग्रह.7z}}`
+`7z x {{संग्रह.7z/का/पथ}}`
 
 - किसी विशिष्ट निर्देशिका में एक संग्रह निकालें:
 
-`7z x {{पथ/से/संग्रह.7z}} -o{{पथ/से/आउटपुट}}`
+`7z x {{संग्रह.7z/का/पथ}} -o{{आउटपुट/का/पथ}}`
 
 - `stdout` के लिए एक संग्रह निकालें:
 
-`7z x {{पथ/से/संग्रह.7z}} -so`
+`7z x {{संग्रह.7z/का/पथ}} -so`
 
 - एक विशिष्ट संग्रह प्रकार का उपयोग करके संग्रह करें:
 
-`7z a -t{{7z|bzip2|gzip|lzip|tar|zip}} {{पथ/से/संग्रह.7z}} {{पथ/से/फ़ाइल_या_निर्देशिका}}`
+`7z a -t{{7z|bzip2|gzip|lzip|tar|zip}} {{संग्रह.7z/का/पथ}} {{फ़ाइल_या_निर्देशिका/का/पथ}}`
 
 - किसी संग्रह की सामग्री को सूचीबद्ध करें:
 
-`7z l {{पथ/से/संग्रह.7z}}`
+`7z l {{संग्रह.7z/का/पथ}}`
 
 - उपलब्ध संग्रह प्रकारों की सूची बनाएं:
 
