Apply suggestions from code review
Co-authored-by: Juri Dispan <juri.dispan@posteo.net>

--- a/pages.de/common/!.md/!.md
+++ b/pages.de/common/!.md/!.md
@@ -7,15 +7,15 @@
 
 `sudo !!`
 
-- Führe den Befehl mit Nummer {{nummer}} aus. Die Nummer eines Befehls kann mit `history` herausgefunden werden:
+- Führe den Befehl mit Nummer aus. Die Nummer eines Befehls kann mit `{{history}}` herausgefunden werden:
 
 `!{{nummer}}`
 
-- Führe den {{nummer}}'t letzt ausgeführten Befehl aus:
+- Führe den Nummer letzt ausgeführten Befehl aus:
 
 `!-{{nummer}}`
 
-- Ersetze durch den neuesten Befehl, der mit `zeichenkette` beginnt:
+- Führe den letzten Befehl aus, der mit `{{zeichenkette}}` begann:
 
 `!{{zeichenkette}}`
 
