Apply suggestions from code review
Co-authored-by: Juri Dispan <juri.dispan@posteo.net>

--- a/pages.de/common/!.md
+++ b/pages.de/common/!.md
@@ -7,13 +7,13 @@
 
 `sudo !!`
 
-- Führe den Befehl mit Nummer aus. Die Nummer eines Befehls kann mit `{{history}}` herausgefunden werden:
+- Führe den Befehl Nummer n aus. Die Nummer eines Befehls kann mit `{{history}}` herausgefunden werden:
 
-`!{{nummer}}`
+`!{{n}}`
 
-- Führe den Nummer letzt ausgeführten Befehl aus:
+- Führe den n't letzten ausgeführten Befehl aus:
 
-`!-{{nummer}}`
+`!-{{n}}`
 
 - Führe den letzten Befehl aus, der mit `{{zeichenkette}}` begann:
 
