--- a/pages.de/common/!.md
+++ b/pages.de/common/!.md
@@ -1,4 +1,4 @@
-# Ausrufezeichen
+# Exclamation mark
 
 > Ein in Bash integriertes Kommando, welches durch einen Befehl aus dem Befehlsverlauf ersetzt wird.
 > Mehr Informationen: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
