--- a/pages.de/common/!.md
+++ b/pages.de/common/!.md
@@ -1,7 +1,7 @@
 # Exclamation mark
 
 > Ein in Bash integriertes Kommando, welches durch einen Befehl aus dem Befehlsverlauf ersetzt wird.
-> Mehr Informationen: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
+> Weitere Informationen: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
 
 - Ersetze '!!' durch den vorherigen Befehl und führe ihn mit sudo aus:
 
