--- a/pages.es/common/!.md
+++ b/pages.es/common/!.md
@@ -1,4 +1,4 @@
-# Signo de exclamación
+# Exclamation mark
 
 > Bash incorporado para sustituir con un comando encontrado en la historia.
 > Más información: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
