--- a/pages.es/common/!.md
+++ b/pages.es/common/!.md
@@ -15,7 +15,7 @@
 
 `!-{{número}}`
 
-- Sustituye por el comando más reciente que empiece por `cadema`:
+- Sustituye por el comando más reciente que empiece por cadema:
 
 `!{{cadena}}`
 
