!: fix placeholder in description
Signed-off-by: K.B.Dharun Krishna <kbdharunkrishna@gmail.com>

--- a/pages.de/common/!.md
+++ b/pages.de/common/!.md
@@ -15,7 +15,7 @@
 
 `!-{{n}}`
 
-- Führe den letzten Befehl aus, der mit `{{zeichenkette}}` begann:
+- Führe den letzten Befehl aus, der mit zeichenkette begann:
 
 `!{{zeichenkette}}`
 
