--- a/pages/common/!.md
+++ b/pages/common/!.md
@@ -15,7 +15,7 @@
 
 `!-{{number}}`
 
-- Substitute with the most recent command that starts with `string`:
+- Substitute with the most recent command that starts with a string:
 
 `!{{string}}`
 
