pages*: remove curly braces from example descriptions

--- a/pages.de/common/!.md
+++ b/pages.de/common/!.md
@@ -3,11 +3,11 @@
 > Ein in Bash integriertes Kommando, welches durch einen Befehl aus dem Befehlsverlauf ersetzt wird.
 > Weitere Informationen: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
 
-- Ersetze '!!' durch den vorherigen Befehl und führe ihn mit sudo aus:
+- Ersetze `!!` durch den vorherigen Befehl und führe ihn mit `sudo` aus:
 
 `sudo !!`
 
-- Führe den Befehl Nummer n aus. Die Nummer eines Befehls kann mit `{{history}}` herausgefunden werden:
+- Führe den Befehl Nummer `n` aus. Die Nummer eines Befehls kann mit `history` herausgefunden werden:
 
 `!{{n}}`
 
