--- a/pages/common/!.md
+++ b/pages/common/!.md
@@ -3,7 +3,7 @@
 > Bash builtin to substitute with a command found in history.
 > More information: <https://www.gnu.org/software/bash/manual/bash.html#Event-Designators>.
 
-- Substitute with the previous command and run it with sudo:
+- Substitute with the previous command and run it with `sudo`:
 
 `sudo !!`
 
